syntax = "proto2";

package NYT.NRpc.NProto;

option java_package = "protocol";

import "yt/java/yt-dt-rpc-client/proto/guid.proto";
import "yt/java/yt-dt-rpc-client/proto/error.proto";

////////////////////////////////////////////////////////////////////////////////

message TRequestHeader
{
    optional NYT.NProto.TGuid request_id = 1;
    required string service = 2;
    required string method = 3;
    optional NYT.NProto.TGuid realm_id = 8;

    optional bool one_way = 4 [default = false];
    optional int32 protocol_version = 9 [default = 0];

    optional int64 start_time = 7;
    optional bool retry = 11 [default = false];

    optional int64 timeout = 10;

    optional string user = 12;

    extensions 100 to max;
}

message TTracingExt
{
    extend NRpc.NProto.TRequestHeader
    {
        optional TTracingExt tracing_ext = 106;
    }

    optional uint64 trace_id = 1;
    optional uint64 span_id = 2;
    optional uint64 parent_span_id = 3;
}

message TMutatingExt
{
    extend NRpc.NProto.TRequestHeader
    {
        optional TMutatingExt mutating_ext = 107;
    }

    required NYT.NProto.TGuid mutation_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TResponseHeader
{
    optional NYT.NProto.TGuid request_id = 1;
    
    // If omitted then OK is assumed.
    optional NYT.NProto.TError error = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TRequestCancelationHeader
{
    required NYT.NProto.TGuid request_id = 1;
    required string service = 2;
    required string method = 3;
    optional NYT.NProto.TGuid realm_id = 4;
}

////////////////////////////////////////////////////////////////////////////////

message TReqDiscover
{
    extensions 100 to max;
}

message TRspDiscover
{
    required bool up = 1;
    repeated string suggested_addresses = 2;
}

////////////////////////////////////////////////////////////////////////////////

